# python-cpi-api

./: .flake8  README.md  docker-compose.yml  pyproject.toml
db/: create.sql
protos/: cpi-api.proto
src/pythoncpiapi/grpc/: cpi_api_server.py
src/pythoncpiapi/grpc/services/: cpi_api_service.py
src/pythoncpiapi/grpc/services/repo/: cpi_series_repository.py
tests/grpc/: test_cpi_api_server.py
